# init

./: .gitignore  Cargo.toml  build.toml
.cargo/: config.toml
crates/ipc-types/: Cargo.toml
crates/ipc-types/src/: lib.rs
ipc-init/: Cargo.toml
ipc-init/src/: lib.rs  types.rs
src/: commands.rs  config.rs  environment.rs  ipc.rs  kernel.rs  lib.rs  main.rs  mount.rs  panic.rs  service.rs
